cargo-features = ["per-package-target"]

[workspace]
members = [
  "rust-eapp",
  "rust-happ",
]

[workspace.package]
version      = "0.2.0"
edition      = "2021"
authors      = ["Jukka Julku <jukka.julku@vtt.fi>"]
repository   = "https://github.com/vector-sdk/rust-sdk-demo"
readme       = "README.md"
license      = "MIT"
description  = "Rust SDK Demo for Keystone Enclaves"

[profile.dev]
opt-level = 1
debug = false

[profile.release]
opt-level = 1
debug = false